--- a/src/ICanPay.Core.Mvc/ICanPay.Core.Mvc.csproj
+++ b/src/ICanPay.Core.Mvc/ICanPay.Core.Mvc.csproj
@@ -1,14 +1,14 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFrameworks>net45;netstandard2.0</TargetFrameworks>
+    <TargetFramework>net45</TargetFramework>
     <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
     <PackageProjectUrl>https://github.com/Varorbc/ICanPay</PackageProjectUrl>
-    <Title>ICanPay.Wechatpay</Title>
+    <Title>ICanPay.Core.Mvc</Title>
     <Authors>Varorbc</Authors>
-    <Description>微信支付</Description>
-    <Version>1.1.9</Version>
-    <PackageTags>dotnetcore;pay;wechatpay;</PackageTags>
+    <Description>Mvc</Description>
+    <Version>1.2.0</Version>
+    <PackageTags>dotnetcore;pay;</PackageTags>
     <RepositoryType>git</RepositoryType>
     <RepositoryUrl>https://github.com/Varorbc/ICanPay</RepositoryUrl>
     <PackageLicenseUrl>https://github.com/Varorbc/ICanPay/blob/master/LICENSE</PackageLicenseUrl>
@@ -18,10 +18,15 @@
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|AnyCPU'">
     <DebugType>none</DebugType>
     <DebugSymbols>false</DebugSymbols>
-    <DocumentationFile>..\..\output\release\netstandard2.0\ICanPay.Wechatpay.xml</DocumentationFile>
+    <DocumentationFile>..\..\output\release\netstandard2.0\ICanPay.Core.Mvc.xml</DocumentationFile>
     <NoWarn>1701;1702;1705;1591</NoWarn>
     <OutputPath>..\..\output\release\</OutputPath>
   </PropertyGroup>
+
+  <ItemGroup>
+    <PackageReference Include="Autofac.Mvc5" Version="4.0.2" />
+    <!--<PackageReference Include="Autofac.WebApi2" Version="4.1.0" />-->
+  </ItemGroup>
 
   <ItemGroup>
     <ProjectReference Include="..\ICanPay.Core\ICanPay.Core.csproj" />
