--- a/src/ICanPay.Alipay/ICanPay.Alipay.csproj
+++ b/src/ICanPay.Alipay/ICanPay.Alipay.csproj
@@ -7,12 +7,14 @@
     <Title>ICanPay.Alipay</Title>
     <Authors>Varorbc</Authors>
     <Description>支付宝支付</Description>
-    <Version>1.1.9</Version>
+    <Version>1.2.0</Version>
     <PackageTags>dotnetcore;pay;alipay;</PackageTags>
     <RepositoryType>git</RepositoryType>
     <RepositoryUrl>https://github.com/Varorbc/ICanPay</RepositoryUrl>
     <PackageLicenseUrl>https://github.com/Varorbc/ICanPay/blob/master/LICENSE</PackageLicenseUrl>
     <Copyright>Varorbc</Copyright>
+    <SignAssembly>true</SignAssembly>
+    <AssemblyOriginatorKeyFile>ICanPay.pfx</AssemblyOriginatorKeyFile>
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|AnyCPU'">
