--- a/test/ICanPay.UnitTest/ICanPay.UnitTest.csproj
+++ b/test/ICanPay.UnitTest/ICanPay.UnitTest.csproj
@@ -13,6 +13,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\..\ICanPay.AspNetCore\ICanPay.AspNetCore.csproj" />
     <ProjectReference Include="..\..\src\ICanPay.Alipay\ICanPay.Alipay.csproj" />
     <ProjectReference Include="..\..\src\ICanPay.Unionpay\ICanPay.Unionpay.csproj" />
     <ProjectReference Include="..\..\src\ICanPay.Wechatpay\ICanPay.Wechatpay.csproj" />
