--- a/src/ICanPay.Wechatpay/ICanPay.Wechatpay.csproj
+++ b/src/ICanPay.Wechatpay/ICanPay.Wechatpay.csproj
@@ -7,7 +7,7 @@
     <Title>ICanPay.Wechatpay</Title>
     <Authors>Varorbc</Authors>
     <Description>微信支付</Description>
-    <Version>1.2.1</Version>
+    <Version>2.0.0-alpha</Version>
     <PackageTags>dotnetcore;pay;wechatpay;</PackageTags>
     <RepositoryType>git</RepositoryType>
     <RepositoryUrl>https://github.com/Varorbc/ICanPay</RepositoryUrl>
