--- a/src/PaySharp.Core.Mvc/PaySharp.Core.Mvc.csproj
+++ b/src/PaySharp.Core.Mvc/PaySharp.Core.Mvc.csproj
@@ -7,7 +7,7 @@
     <Title>PaySharp.Core.Mvc</Title>
     <Authors>Varorbc</Authors>
     <Description>Mvc</Description>
-    <Version>1.2.0</Version>
+    <Version>1.0.0-alpha</Version>
     <PackageTags>dotnetcore;pay;</PackageTags>
     <RepositoryType>git</RepositoryType>
     <RepositoryUrl>https://github.com/Varorbc/PaySharp</RepositoryUrl>
