--- a/src/PaySharp.Qpay/PaySharp.Qpay.csproj
+++ b/src/PaySharp.Qpay/PaySharp.Qpay.csproj
@@ -4,11 +4,11 @@
     <TargetFrameworks>net45;netstandard2.0</TargetFrameworks>
     <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
     <PackageProjectUrl>https://github.com/Varorbc/PaySharp</PackageProjectUrl>
-    <Title>PaySharp.Core</Title>
+    <Title>PaySharp.Qpay</Title>
     <Authors>Varorbc</Authors>
-    <Description>支付核心</Description>
-    <Version>1.0.0-preview3</Version>
-    <PackageTags>dotnetcore;pay;</PackageTags>
+    <Description>QQ钱包支付</Description>
+    <Version>1.0.0-preview1</Version>
+    <PackageTags>dotnetcore;pay;qpay;</PackageTags>
     <RepositoryType>git</RepositoryType>
     <RepositoryUrl>https://github.com/Varorbc/PaySharp</RepositoryUrl>
     <PackageLicenseUrl>https://github.com/Varorbc/PaySharp/blob/master/LICENSE</PackageLicenseUrl>
@@ -21,22 +21,17 @@
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|AnyCPU'">
     <DebugType>none</DebugType>
     <DebugSymbols>false</DebugSymbols>
-    <DocumentationFile>..\..\output\release\netstandard2.0\PaySharp.Core.xml</DocumentationFile>
+    <DocumentationFile>..\..\output\release\netstandard2.0\PaySharp.Qpay.xml</DocumentationFile>
     <NoWarn>1701;1702;1705;1591</NoWarn>
     <OutputPath>..\..\output\release\</OutputPath>
   </PropertyGroup>
 
-  <ItemGroup Condition="'$(TargetFramework)' == 'net45'">
-    <Reference Include="System.Web" />
-  </ItemGroup>
-
   <ItemGroup Condition="'$(TargetFramework)' == 'netstandard2.0'">
-    <PackageReference Include="Microsoft.AspNetCore.Http" Version="1.0.0" />
+    <PackageReference Include="Microsoft.Extensions.Configuration.Binder" Version="2.0.0" />
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="Newtonsoft.Json" Version="9.0.1" />
-    <PackageReference Include="System.ComponentModel.Annotations" Version="4.1.0" />
+    <ProjectReference Include="..\PaySharp.Core\PaySharp.Core.csproj" />
   </ItemGroup>
 
 </Project>
