--- a/src/PaySharp.Core.Mvc/PaySharp.Core.Mvc.csproj
+++ b/src/PaySharp.Core.Mvc/PaySharp.Core.Mvc.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>net45</TargetFramework>
@@ -7,7 +7,7 @@
     <Title>PaySharp.Core.Mvc</Title>
     <Authors>Varorbc</Authors>
     <Description>Mvc</Description>
-    <Version>1.0.0-preview1</Version>
+    <Version>1.0.0</Version>
     <PackageTags>dotnetcore;pay;</PackageTags>
     <RepositoryType>git</RepositoryType>
     <RepositoryUrl>https://github.com/Varorbc/PaySharp</RepositoryUrl>
