--- a/src/PaySharp.Qpay/PaySharp.Qpay.csproj
+++ b/src/PaySharp.Qpay/PaySharp.Qpay.csproj
@@ -7,7 +7,7 @@
     <Title>PaySharp.Qpay</Title>
     <Authors>Varorbc</Authors>
     <Description>QQ钱包支付</Description>
-    <Version>1.0.0-preview1</Version>
+    <Version>1.0.0</Version>
     <PackageTags>dotnetcore;pay;qpay;</PackageTags>
     <RepositoryType>git</RepositoryType>
     <RepositoryUrl>https://github.com/Varorbc/PaySharp</RepositoryUrl>
