--- a/src/PaySharp.Wechatpay/PaySharp.Wechatpay.csproj
+++ b/src/PaySharp.Wechatpay/PaySharp.Wechatpay.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFrameworks>net45;netstandard2.0</TargetFrameworks>
@@ -7,7 +7,7 @@
     <Title>PaySharp.Wechatpay</Title>
     <Authors>Varorbc</Authors>
     <Description>微信支付</Description>
-    <Version>1.0.0-preview1</Version>
+    <Version>1.0.0</Version>
     <PackageTags>dotnetcore;pay;wechatpay;</PackageTags>
     <RepositoryType>git</RepositoryType>
     <RepositoryUrl>https://github.com/Varorbc/PaySharp</RepositoryUrl>
