--- a/test/PaySharp.UnitTest/PaySharp.UnitTest.csproj
+++ b/test/PaySharp.UnitTest/PaySharp.UnitTest.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>netcoreapp2.0</TargetFramework>
@@ -21,7 +21,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\..\ICanPay.AspNetCore\ICanPay.AspNetCore.csproj" />
+    <ProjectReference Include="..\..\src\PaySharp.AspNetCore\PaySharp.AspNetCore.csproj" />
 	<ProjectReference Include="..\..\src\PaySharp.Alipay\PaySharp.Alipay.csproj" />
     <ProjectReference Include="..\..\src\PaySharp.Unionpay\PaySharp.Unionpay.csproj" />
     <ProjectReference Include="..\..\src\PaySharp.Wechatpay\PaySharp.Wechatpay.csproj" />
