--- a/src/PaySharp.Core/PaySharp.Core.csproj
+++ b/src/PaySharp.Core/PaySharp.Core.csproj
@@ -14,6 +14,7 @@
 
   <ItemGroup Condition="'$(TargetFramework)' == 'net45'">
     <Reference Include="System.Web" />
+    <Reference Include="System.ComponentModel.DataAnnotations" />
     <Reference Include="System.Configuration" />
   </ItemGroup>
 
@@ -23,7 +24,6 @@
 
   <ItemGroup>
     <PackageReference Include="Newtonsoft.Json" Version="9.0.1" />
-    <PackageReference Include="System.ComponentModel.Annotations" Version="4.1.0" />
   </ItemGroup>
 
   <Import Project="../../output.props" />
